[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Datapacks/UI/CrotchCode/UI/AnimPickerWidget.gd" type="Script" id=1]
[ext_resource path="res://UI/CustomViewportControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Stage3D/Stage3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/UI/AnimPickerSelectorVar.tscn" type="PackedScene" id=4]

[sub_resource type="Environment" id=2]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("VBoxContainer/HBoxContainer/PanelContainer/Viewport")

[node name="AnimPickerWidget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 666.0
size_flags_vertical = 3

[node name="AnimList" type="ItemList" parent="VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 666.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="SettingsWrapperContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 740.0
margin_bottom = 666.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SettingsWrapperContainer"]
margin_right = 536.0
margin_bottom = 14.0
text = "Animation settings"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/SettingsWrapperContainer"]
margin_top = 18.0
margin_right = 536.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimSettingsList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsWrapperContainer/ScrollContainer"]
margin_right = 536.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AnimPickerSelectorVar" parent="VBoxContainer/HBoxContainer/SettingsWrapperContainer/ScrollContainer/AnimSettingsList" instance=ExtResource( 4 )]

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 744.0
margin_right = 1280.0
margin_bottom = 666.0
size_flags_horizontal = 3

[node name="Viewport" type="Viewport" parent="VBoxContainer/HBoxContainer/PanelContainer"]
size = Vector2( 1280, 680 )
handle_input_locally = false
hdr = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="Stage3D" parent="VBoxContainer/HBoxContainer/PanelContainer/Viewport" instance=ExtResource( 3 )]

[node name="Camera" type="Camera" parent="VBoxContainer/HBoxContainer/PanelContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.141, 50 )
environment = SubResource( 2 )
projection = 1
current = true
size = 10.0

[node name="CustomViewportControl" parent="VBoxContainer/HBoxContainer/PanelContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 529.0
margin_bottom = 659.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
viewportPath = NodePath("../Viewport")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 670.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 50 )

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 62.0
margin_bottom = 50.0
text = "Confirm"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 120.0
margin_bottom = 50.0
text = "Cancel"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/AnimList" to="." method="_on_AnimList_item_selected"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PanelContainer" to="." method="_on_PanelContainer_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
